# nif-document-analyser

./: .gitignore  README.md  conf.ttl  docker-compose.yml  prompts.txt  virtuoso-init.sh
backend/: Dockerfile  app.py  pyproject.toml  requirements.txt  virtuoso.py
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.ts  app.module.ts
frontend/src/app/components/document-uploader/: document-uploader.component.ts
frontend/src/app/components/processing-dialog/: processing-dialog.component.ts
frontend/src/app/components/results/: results.component.ts
frontend/src/app/services/: document.service.ts
